Added get and create for equipment. Changed to java 17
